prevented horizontal scrolling

--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,8 @@
   list-style:none;
   box-sizing:border-box;
   text-decoration:none;
+  overflow-x: hidden;
+
 }
 :root{
   --color-bgs: #0c0c18;
